--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ install:
   - "pip install -r requirements.txt"
   - "pip install coveralls"
 script:
-  - nosetests --with-coverage --cover-package=pygeohash
+  - nosetests --with-coverage --cover-package=elote
 after_success:
   - coveralls
