--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,6 +9,11 @@ jobs:
     steps:
       - name: Clone
         uses: actions/checkout@v1
+      - name: Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
       - name: Build Docs
         uses: ammaraskar/sphinx-action@master
         with:
