--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -7,7 +7,11 @@ jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
+      - name: Clone
+          if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
+          uses: actions/checkout@v1
       - name: Build package
+        if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
