--- a/docs/Makefile
+++ b/docs/Makefile
@@ -4,7 +4,7 @@
 # You can set these variables from the command line, and also
 # from the environment for the first two.
 SPHINXOPTS    =
-SPHINXBUILD   = sphinx-build
+SPHINXBUILD   = /Users/willmcginnis/.pyenv/versions/elote_venv/bin/sphinx-build
 SOURCEDIR     = source
 BUILDDIR      = build
 
