--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,15 +9,26 @@ jobs:
     steps:
       - name: Clone
         uses: actions/checkout@v1
-      - name: Dependencies
+      
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      
+      - name: Install uv
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+      
+      - name: Install Dependencies
+        run: |
+          uv pip install -e ".[dev]"
+      
       - name: Build Docs
         uses: ammaraskar/sphinx-action@master
         with:
           docs-folder: "./docs/"
+      
       - name: Deploy Docs
         uses: peaceiris/actions-gh-pages@v3
         with:
