--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,10 @@ deps =
     pytest
     pytest-cov
     pytest-benchmark
+allowlist_externals =
+    uv
 commands =
+    uv pip install -e .
     pytest {posargs:tests} --cov=elote --cov-report=term
 
 [testenv:lint]
