--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ dependencies = [
     "scipy>=1.7.0",
     "pandas>=1.3.0",
     "requests>=2.25.0",
-    "setuptools>=42.0.0"
+    "setuptools>=42.0.0",
+    "matplotlib>=3.5.0"
 ]
 requires-python = ">=3.8"
 
@@ -49,8 +50,6 @@ dev = [
     "tox-uv",
     "pytest-benchmark",
 ]
-# Note: For macOS users, you may need to install libomp for XGBoost (used by sportsdataverse):
-#   brew install libomp
 datasets = [
     "sportsdataverse[all]",
     "pyzstd>=0.15.0",
