--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ deps =
 allowlist_externals =
     uv
 commands =
-    uv pip install -e .
+    uv pip install -e ".[datasets]"
     pytest {posargs:tests} --cov=elote --cov-report=term
 
 [testenv:lint]
