--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -4,19 +4,40 @@ on:
     types: created
 
 jobs:
-  publish:
+  build_and_publish:
     runs-on: ubuntu-latest
+    permissions:
+      # IMPORTANT: this permission is mandatory for Trusted Publishing
+      id-token: write
     steps:
       - name: Clone
-        uses: actions/checkout@v1
-      - name: Build package
+        uses: actions/checkout@v3
+      
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
-          python setup.py bdist_wheel sdist
-      - name: Publish package
-        uses: pypa/gh-action-pypi-publish@master
+          pip install build
+      
+      - name: Build source distribution
+        run: |
+          # Clean the build directories first
+          rm -fr build/
+          rm -fr dist/
+          rm -fr .eggs/
+          find . -name '*.egg-info' -exec rm -fr {} +
+          find . -name '*.egg' -exec rm -f {} +
+          
+          # Build only the source distribution
+          python -m build --sdist
+      
+      - name: Publish package distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          user: willmcg4132
-          password: ${{ secrets.pypi_password }}
+          packages-dir: dist/
