--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -4,8 +4,11 @@ on:
     types: created
 
 jobs:
-  publish:
+  build_and_publish:
     runs-on: ubuntu-latest
+    permissions:
+      # IMPORTANT: this permission is mandatory for Trusted Publishing
+      id-token: write
     steps:
       - name: Clone
         uses: actions/checkout@v3
@@ -17,33 +20,36 @@ jobs:
       
       - name: Install uv
         run: |
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+          python -m pip install --upgrade pip
+          pip install uv
       
-      - name: Create virtual environment and install dependencies
+      - name: Setup virtual environment
         run: |
           uv venv
+          echo "VIRTUAL_ENV=$(pwd)/.venv" >> $GITHUB_ENV
+          echo "$(pwd)/.venv/bin" >> $GITHUB_PATH
+      
+      - name: Install dependencies
+        run: |
           uv pip install -e ".[dev]"
           uv pip install build
       
       - name: Build source distribution
         run: |
           # Clean the build directories first
-          rm -fr build/
-          rm -fr dist/
-          rm -fr .eggs/
-          find . -name '*.egg-info' -exec rm -fr {} +
-          find . -name '*.egg' -exec rm -f {} +
-          find . -name '*.pyc' -exec rm -f {} +
-          find . -name '*.pyo' -exec rm -f {} +
-          find . -name '*~' -exec rm -f {} +
-          find . -name '__pycache__' -exec rm -fr {} +
+          rm -rf build/
+          rm -rf dist/
+          rm -rf .eggs/
+          
+          # Find and remove egg-info directories, excluding the virtual environment
+          find . -path ./.venv -prune -o -name '*.egg-info' -type d -exec rm -rf {} \; 2>/dev/null || true
+          find . -path ./.venv -prune -o -name '*.egg' -type f -exec rm -f {} \; 2>/dev/null || true
+          find . -path ./.venv -prune -o -name '__pycache__' -type d -exec rm -rf {} \; 2>/dev/null || true
           
           # Build only the source distribution
-          uv run python -m build --sdist
+          python -m build --sdist
       
-      - name: Publish package distributions to PyPI
+      - name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          user: willmcg4132
-          password: ${{ secrets.pypi_password }}
+          packages-dir: dist/
