--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,6 @@ classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
 ]
@@ -30,7 +28,7 @@ dependencies = [
     "setuptools>=42.0.0",
     "matplotlib>=3.5.0"
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 
 [project.urls]
 Homepage = "https://github.com/wdm0006/elote"
@@ -49,6 +47,11 @@ dev = [
     "tox",
     "tox-uv",
     "pytest-benchmark",
+    "mypy>=1.8.0",
+    "types-tqdm",
+    "types-requests",
+    "pandas-stubs",
+    "scipy-stubs",
 ]
 datasets = [
     "sportsdataverse[all]",
@@ -99,4 +102,35 @@ indent-style = "space"
 skip-magic-trailing-comma = false
 
 # Automatically detect the appropriate line ending.
-line-ending = "auto" 
+line-ending = "auto"
+
+[tool.mypy]
+python_version = "3.8"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_untyped_decorators = false
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
+strict_optional = true
+show_error_codes = true
+show_column_numbers = true
+pretty = true
+files = ["elote"]
+exclude = ["tests/.*", "examples/.*", "scripts/.*", "docs/.*"]
+
+# Per-module options:
+[[tool.mypy.overrides]]
+module = [
+    "numpy.*",
+    "pandas.*",
+    "matplotlib.*",
+    "tqdm.*",
+    "sportsdataverse.*",
+    "scipy.*",
+]
+ignore_missing_imports = true 
